fix of trick card alignment with angular-masonry

--- a/public/css/elements.css
+++ b/public/css/elements.css
@@ -24,7 +24,7 @@ white-space: normal;
    bottom: 0;
    background-color: white;
    z-index: 999;
-   margin-top: 50px;
+   margin-top: 80px;
 }
 
 .editor { 
